--- a/views/edit_solve.erb
+++ b/views/edit_solve.erb
@@ -1,9 +1,7 @@
 <form action="/solve/update/<%= @solve.id %>" method="post">
   <% columns = @solve.columns - [:id] %>
   <% columns.each do |column| %>
-    <label><%= column.to_s.capitalize %></label>
-    <textarea name="solve[<%= column %>]" class="form-control"
-      rows="<%= @solve[column].to_s.lines.count %>" ><%= @solve[column] %></textarea>
+    <%= text_input(column.capitalize, @solve, column) %>
   <% end %>
 
   <label>Tags (separated by newlines)</label>
