--- a/views/column_editor.erb
+++ b/views/column_editor.erb
@@ -1,3 +1,3 @@
 <label><%= title %></label>
-<textarea name="<%= field_name %>" class="form-control"
+<textarea name="model[<%= field_name %>]" class="form-control"
   rows="<%= value.to_s.lines.count %>"><%= value %></textarea>
