Fixed bug with adding solves

--- a/views/edit_average.erb
+++ b/views/edit_average.erb
@@ -17,7 +17,7 @@
     <th> Time </th>
     <th> Actions </th>
   </tr>
-  <% @average.solves.sort_by(&:position_in_average).each do |solve| %>
+  <% @average.solves.sort_by{ |solve| solve.position_in_average || 0 }.each do |solve| %>
     <tr>
       <td> <%= solve.id %> </td>
       <td> <%= solve.time %> </td>
