Add link to source

--- a/views/edit_average.erb
+++ b/views/edit_average.erb
@@ -5,6 +5,7 @@
   <%= text_input("Competition", @average, :competition) %>
   <%= text_input("Puzzle", @average, :puzzle) %>
   <%= text_input("Visible? (0 = no, 1 = yes)", @average, :visible) %>
+  <%= text_input("Source URL", @average, :source_url) %>
 
   <br>
   <input type="submit" value="Update" class="form-control">
