Allow averages to have tags as well as solves

--- a/views/column_editor.erb
+++ b/views/column_editor.erb
@@ -1,3 +1,9 @@
+<%  value = if value.is_a? Array
+              value.map(&:name).join("\n")
+            else
+              value 
+            end %>
+
 <label><%= title %></label>
 <textarea name="model[<%= field_name %>]" class="form-control"
   rows="<%= value.to_s.lines.count %>"><%= value %></textarea>
