--- a/views/edit_average.erb
+++ b/views/edit_average.erb
@@ -6,6 +6,7 @@
   <%= text_input("Puzzle", @average, :puzzle) %>
   <%= text_input("Visible? (0 = no, 1 = yes)", @average, :visible) %>
   <%= text_input("Source URL", @average, :source_url) %>
+  <%= text_input("Tags", @average, :tags) %>
 
   <br>
   <input type="submit" value="Update" class="form-control">
