--- a/views/solve.erb
+++ b/views/solve.erb
@@ -3,7 +3,7 @@
   <%=h @solve.single_record %>
   <%=h @solve.puzzle %>
   solve by
-  <%= @solve.solver.name_link %>
+  <%= erb :solver_link, locals: { solver: @solve.solver } %>
   <%= @solve.competition.at %>
 </h2>
 
