--- a/views/solution.erb
+++ b/views/solution.erb
@@ -1,7 +1,7 @@
-<% steps.sort_by { |step| step.position_in_solve }.each do |step| %>
+<% solve.steps.sort_by { |step| step.position_in_solve }.each do |step| %>
   <%= step.moves %>
   <span class="comment">
-    // <%= step.explanation %>
+    <%= solve.puzzle.delimiter %> <%= step.explanation %>
   </span>
   <br>
 <% end %>
