Make all links open in new window

--- a/views/solve_links.erb
+++ b/views/solve_links.erb
@@ -1,29 +1,28 @@
 <div class="solve-links">
   <% if @solve.puzzle.garronizable? %>
-    <div class="garron">
-      <a href="<%=h garronize(@solve) %>">View on alg.garron</a>
+    <div class="garron solve-link">
+      <%= link_to "alg.garron", garronize(@solve), target: "_blank" %>
     </div>
   <% end %>
 
   <% if @solve.puzzle.name =~ /3x3/ && !@solve.scramble.blank? %>
-    <div class="ksim-link">
-      <a href=<%=h ksim_link(@solve) %> target="_blank" >
-        Try scramble on kSim
-      </a>
+    <div class="ksim-link solve-link">
+      <%= link_to "kSim", ksim_link(@solve), target: "_blank" %>
     </div>
   <% end %>
 
   <% unless @solve.youtube.nil? || @solve.youtube.empty? %>
-    <div class="youtube">
-      <a href="http://www.youtube.com/watch?v=<%=h @solve.youtube %>" target="_blank" >
-        View on YouTube
-      </a>
+    <div class="youtube solve-link">
+      <%= link_to "YouTube",
+        "http://www.youtube.com/watch?v=#{h @solve.youtube}",
+      target: "_blank" %>
     </div>
   <% end %>
 
   <% unless @solve.average.source_url.blank? %>
-    <a href="<%= @solve.average.source_url %>">
-      View source
-    </a>
+    <div class="source solve-link">
+      <%= link_to "Source", @solve.average.source_url,
+        target: "_blank" %>
+    </div>
   <% end %>
 </div>
