Handle solves with no times in a weird way right now, need to discuss better way

--- a/views/average_sidebar.erb
+++ b/views/average_sidebar.erb
@@ -3,7 +3,11 @@
   <%= link_to average.format_solve(solve), "/solve/#{solve.id}", if: solve.visible? %>
   <br>
 <% end %>
+
+<% if average.has_result? %>
 = <%= format_time average.result %>
+<% end %>
+
 <% unless average.average_record.blank? %>
   (<%= average.average_record %>)
 <% end %>
