--- a/views/input.erb
+++ b/views/input.erb
@@ -1,5 +1,6 @@
+<br>
 <label>
-  <%= field_name.capitalize %> <br>
+  <%= field_name.capitalize %>
     <select name="time-specifier" class="form-control" >
       <option value="">All</option>
       <% [["equal", "Equal to"],
@@ -15,5 +16,5 @@
 </label>
 <label>
   <input cols="10" name="time-value" class="form-control small" type="text"
-  value="<%= params["time-value"] %>"></input>
+  value="<%= params["time-value"] %>">
 </label>
