--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,5 @@
 <div class="row center">
+  <h3>Search</h3>
   <form action="/" method="GET" >
     <div class="form-inline">
     <% RCDB::Solve.fields.each do |field| %>
