--- a/views/solve.erb
+++ b/views/solve.erb
@@ -36,18 +36,21 @@
   </div>
 
 </div>
-<div class="row">
-  <div class="col-lg-8">
-    <a href="#"><h3 class="link-header"
-        id="video-header">Video 
-        <span id="video-arrow" class="arrow glyphicon glyphicon-chevron-right"></span>
-    </h3></a>
-    <div id="video">
-      <iframe class="youtube-player" type="text/html" width="640" height="385" src="http://www.youtube.com/embed/<%= @solve.youtube %>" allowfullscreen frameborder="0">
-      </iframe>
+
+<% unless @solve.youtube.blank? %>
+  <div class="row">
+    <div class="col-lg-8">
+      <a href="#"><h3 class="link-header"
+          id="video-header">Video 
+          <span id="video-arrow" class="arrow glyphicon glyphicon-chevron-right"></span>
+      </h3></a>
+      <div id="video">
+        <iframe class="youtube-player" type="text/html" width="640" height="385" src="http://www.youtube.com/embed/<%= @solve.youtube %>" allowfullscreen frameborder="0">
+        </iframe>
+      </div>
     </div>
   </div>
-</div>
+<% end %>
 
 
 <%= erb :solve_links %>
