fix page scrolling to top

--- a/views/solve.erb
+++ b/views/solve.erb
@@ -40,7 +40,7 @@
 <% unless @solve.youtube.blank? %>
   <div class="row">
     <div class="col-lg-8">
-      <a href="#"><h3 class="link-header"
+      <a href="javascript:void(0);"><h3 class="link-header"
           id="video-header">Video 
           <span id="video-arrow" class="arrow glyphicon glyphicon-chevron-right"></span>
       </h3></a>
