--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/stylesheets/main.css">
     <link rel="icon" type="image/png" href="/favicon.ico">
 
-    <title>RCDB</title>
+    <title>CubeSolves</title>
 
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
@@ -27,7 +27,7 @@
   </head>
   <body>
     <nav class="navbar navbar-default" role="navigation">
-    <a class="navbar-brand" href="/">Reconstruction&nbsp;Database</a>
+    <a class="navbar-brand" href="/">CubeSolves</a>
 
     <% if current_user %>
       <ul class="nav navbar-nav navbar-right">
