--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/stylesheets/main.css">
+    <link rel="stylesheet" href="/stylesheets/common.css">
     <link rel="icon" type="image/png" href="/favicon.ico">
 
     <title>CubeSolves</title>
