escape tag and time input

--- a/views/input.erb
+++ b/views/input.erb
@@ -16,5 +16,5 @@
 </label>
 <label>
   <input cols="10" name="time-value" class="form-control small" type="text"
-  value="<%= params["time-value"] %>">
+  value="<%=Helpers.h params["time-value"] %>">
 </label>
