--- a/views/tag_input.erb
+++ b/views/tag_input.erb
@@ -1,4 +1,4 @@
 <label>Tags (separated by spaces)
   <input cols="10" name="tags" class="form-control small" type="text"
-  value="<%= params["tags"] %>">
+  value="<%=Helpers.h params["tags"] %>">
 </label>
