--- a/views/layout.erb
+++ b/views/layout.erb
@@ -68,6 +68,11 @@
           href="https://github.com/justinj/reconstruction-database/issues"
           target="_blank">
           Issues
+        </a> | 
+        <a 
+          href="/contributors"
+          target="_blank">
+          Top Contributors
         </a>
       </div>
     </div>
