--- a/views/layout.erb
+++ b/views/layout.erb
@@ -42,6 +42,7 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Logged in as <%= current_user.name %> <b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li><a href="/average">Averages</a></li>
+          <li><a href="/reconstructor">Reconstructors</a></li>
           <li><a href="/solver">Solvers</a></li>
           <li><a href="/competition">Competitions</a></li>
           <li><a href="/puzzle">Puzzles</a></li>
