--- a/views/index.erb
+++ b/views/index.erb
@@ -30,7 +30,7 @@
         <td> <%=h solve.puzzle.name %> </td>
         <td> <div class="record"><%=h solve.single_record %></div> </td>
         <td> <div class="record"><%=h solve.average.average_record %></div> </td>
-        <td> <a href="/solve/<%= solve.id %>"> <%=h pluralize_word(solve.format) %> </a> </td>
+        <td> <a href="/solve/<%= solve.id %>"> <%=h solve.format %> </a> </td>
         <td> <%=h solve.competition %> </td>
         <td> <%=h date_added(solve) %> </td>
       </tr>
