--- a/views/edit_solve.erb
+++ b/views/edit_solve.erb
@@ -8,6 +8,7 @@
   <%= text_input("Average Id", @solve, :average_id) %>
   <%= text_input("Scramble", @solve, :scramble) %>
   <%= text_input("Solution", @solve, :solution) %>
+  <%= text_input("Canonical Solution (FMC)", @solve, :canonical_solution) %>
   <%= text_input("Penalty", @solve, :penalty) %>
   <%= text_input("Time", @solve, :time) %>
   <%= text_input("Youtube", @solve, :youtube) %>
