--- a/views/enumerate_field.erb
+++ b/views/enumerate_field.erb
@@ -1,4 +1,5 @@
 <h1>List of <%= @model.field_name.capitalize %>s</h1>
+<%= link_to "New", "/#{@model.query_name}/new" %>
 <% columns = @model.columns %>
 <table class="table table-condensed table-bordered table-striped table-hover span8">
   <tr>
