--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,12 +4,14 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet">
     <link rel="stylesheet" href="/stylesheets/common.css">
     <link rel="icon" type="image/png" href="/favicon.ico">
 
     <title>CubeSolves</title>
 
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="//code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
 
