allow specifying a different reconstructor for a brest post

--- a/views/new_from_brest.erb
+++ b/views/new_from_brest.erb
@@ -1,4 +1,11 @@
 <form action="/average/submit_brest_post" method="POST">
+    <label>
+        Reconstructor
+        <input name="submission[reconstructor]"
+               class="form-control"
+               type="text"
+               value="Brest"></input>
+    </label>
   <textarea name="submission[content]" 
             class="form-control"
             rows="40"
