Change alg.garron.us links to alg.cubing.net.

--- a/views/solve_links.erb
+++ b/views/solve_links.erb
@@ -1,7 +1,7 @@
 <div class="solve-links">
   <% if @solve.puzzle.garronizable? %>
     <div class="garron solve-link">
-      <%= link_to "alg.garron", garronize(@solve), target: "_blank" %>
+      <%= link_to "alg.cubing.net", garronize(@solve), target: "_blank" %>
     </div>
   <% end %>
 
