--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,6 +5,7 @@
 
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="//code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet">
+
     <link rel="stylesheet" href="/stylesheets/common.css">
     <link rel="icon" type="image/png" href="/favicon.ico">
 
@@ -13,7 +14,7 @@
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="//code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-
+	  <script src="http://www.ocf.berkeley.edu/~dadams/js/three_and_roofpig.min.js"></script>
 
     <script src="/javascripts/custom.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript">
