--- a/views/solve_links.erb
+++ b/views/solve_links.erb
@@ -1,4 +1,8 @@
 <div class="solve-links">
+  <% if @solve.puzzle.roofpigable? %>
+	  <div class="roofpig" data-config="<%= roofpig_form(@solve) %>"></div>
+  <% end %>
+
   <% if @solve.puzzle.garronizable? %>
     <div class="garron solve-link">
       <%= link_to "alg.cubing.net", garronize(@solve), target: "_blank" %>
